--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -19,7 +19,7 @@
         </activity>
         <provider
                 android:name="androidx.core.content.FileProvider"
-                android:authorities="com.SolutionFactory.post"
+                android:authorities="com.SolutionFactory.post.fileprovider"
                 android:exported="false"
                 android:grantUriPermissions="true">
             <meta-data
